[project]
name = "mast3r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "gradio>=5.17.1",
    "huggingface-hub[torch]>=0.22",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pyglet<2",
    "roma>=1.5.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
]
